docs(Cargo.toml): publish to `crates.io`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,11 @@
 name = "rblink"
 version = "0.1.0"
 edition = "2024"
+description = "A minimal HTTP server written in pure Rust"
+keywords = ["http", "server", "rust"]
+license-file = "LICENSE"
+categories = ["http", "server"]
+readme = "README.md"
+repository = "https://github.com/mi66mc/rblink"
 
 [dependencies]
